Fix master-deploy workflow to include deployment port in status code check

--- a/.github/workflows/master-deploy.yml
+++ b/.github/workflows/master-deploy.yml
@@ -109,7 +109,7 @@ jobs:
           sleep 10
           
           # Test if the web application is responding
-          STATUS_CODE=$(curl -s -o /dev/null -w '%{http_code}' http://$VM_IP)
+          STATUS_CODE=$(curl -s -o /dev/null -w '%{http_code}' http://$VM_IP:$DEPLOY_PORT)
           
           echo "Web application status code: $STATUS_CODE"
           
