Update project references from Naya Dashboard to MegaPlug Dashboard and adjust environment configurations accordingly

--- a/angular.json
+++ b/angular.json
@@ -98,8 +98,8 @@
                                     "with": "src/environments/environment.staging.ts"
                                 }
                             ],
-                            "baseHref": "/dev-naya-dashboard/",
-                            "deployUrl": "/dev-naya-dashboard/"
+                            "baseHref": "/dev-megaplug-dashboard/",
+                            "deployUrl": "/dev-megaplug-dashboard/"
                         },
                         "development": {
                             "optimization": false,
