--- a/package.json
+++ b/package.json
@@ -26,14 +26,15 @@
         "@angular/compiler": "18.0.1",
         "@angular/core": "18.0.1",
         "@angular/forms": "18.0.1",
+        "@angular/google-maps": "^19.2.15",
         "@angular/material": "18.0.1",
         "@angular/material-luxon-adapter": "18.0.1",
         "@angular/platform-browser": "18.0.1",
         "@angular/platform-browser-dynamic": "18.0.1",
         "@angular/router": "18.0.1",
         "@angular/service-worker": "^18.2.9",
-        "@material/theme": "^14.0.0",
         "@material/tab-indicator": "^14.0.0",
+        "@material/theme": "^14.0.0",
         "@ngneat/transloco": "6.0.4",
         "apexcharts": "3.49.1",
         "crypto-js": "4.2.0",
