fix birthday in edit reservation

--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
         "quill": "2.0.2",
         "rxjs": "7.8.1",
         "sweetalert2": "^11.14.1",
+        "swiper": "^11.2.10",
         "tslib": "2.6.2",
         "zone.js": "0.14.6"
     },
