working on station details

--- a/angular.json
+++ b/angular.json
@@ -47,6 +47,7 @@
                             "includePaths": ["src/@fuse/styles"]
                         },
                         "styles": [
+                            "node_modules/swiper/swiper-bundle.css",
                             "src/@fuse/styles/tailwind.scss",
                             "src/@fuse/styles/themes.scss",
                             "src/styles/vendors.scss",
